# Haskell

./: README  cabal.project  testing.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  testing-0.1.0.0-inplace.conf
src/: AlberiBinariDiRicerca.hs  AlberiGenerici.hs  Liste.hs  MatriceMedianteQuadTrees.hs  Matrici.hs  Numeri.hs  QuadTrees.hs
test/: AlberiBinariDiRicercaSpec.hs  AlberiGenericiSpec.hs  ListeSpec.hs  MatriceMedianteQuadTreesSpec.hs  MatriciSpec.hs  NumeriSpec.hs  QuadTreesSpec.hs  TestingAlberiDiRicercaMain.hs  TestingAlberiGenericiMain.hs  TestingListeMain.hs  TestingMatriceQuadTreesMain.hs  TestingMatriciMain.hs  TestingNumeriMain.hs  TestingQuadTreesMain.hs
